set min height of hover overlay much lower to prevent image shifting at tiny sizes

--- a/grails-app/assets/stylesheets/pashion/pashion_components/_card.scss
+++ b/grails-app/assets/stylesheets/pashion/pashion_components/_card.scss
@@ -150,7 +150,7 @@
 
 	}
 	.card-image:hover {
-		min-height: 126px;
+		min-height: 68px;
 	}
 	.card-image:hover .card-look-number-brand-season,
 	.card-image:hover .card-look-number-name {
